Fixed the offline message overlapping with the  buttons

--- a/src/app/fyle/capture-receipt/capture-receipt.page.scss
+++ b/src/app/fyle/capture-receipt/capture-receipt.page.scss
@@ -69,6 +69,9 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    &__offline {
+      bottom: calc(env(safe-area-inset-bottom) + 45px);
+    }
   }
 
   &--gallery-icon-block,
